--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions{
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -29,6 +35,7 @@ android {
 }
 
 dependencies {
+    def room_version = "2.2.5"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -39,4 +46,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'joda-time:joda-time:2.9.1'
+
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
+
 }
