--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         tools:targetApi="31" >
         <activity
             android:name=".DailyLog"
-            android:exported="false"
-            android:label="@string/title_activity_daily_log"/>
+            android:exported="false"/>
 
         <activity
             android:name=".SingleEntryViewActivity"
