--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name=".AppActivity"
@@ -11,11 +11,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.ToiletLog"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDdDdFv2K6plIEKfiEnWpus6uSSNDcI-VY"
+            />
+
+        <activity
+            android:name=".MapActivity"
+            android:exported="true" />
         <activity
             android:name=".DailyLog"
-            android:exported="false"/>
-
+            android:exported="false" />
         <activity
             android:name=".SingleEntryViewActivity"
             android:exported="false" />
@@ -34,7 +41,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
