--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -38,6 +39,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation 'com.google.android.gms:play-services-places:17.0.0'
     def room_version = "2.2.5"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
