--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.5.0'
     def room_version = "2.2.5"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -62,5 +63,6 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
 }
