--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,7 @@ android {
 dependencies {
     def room_version = "2.2.5"
 
-    //noinspection GradleCompatible
-    implementation 'com.android.support:support-compat:28.0.0'
+
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -61,5 +60,8 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+
+
+    //implementation "com.android.support:support-compat:28.0.0"
 
 }
