--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
@@ -20,10 +19,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ToiletLog"
         tools:targetApi="31">
+        <activity
+            android:name=".ChartActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDdDdFv2K6plIEKfiEnWpus6uSSNDcI-VY"
-            />
+            android:value="AIzaSyDdDdFv2K6plIEKfiEnWpus6uSSNDcI-VY" />
 
         <activity
             android:name=".MapActivity"
@@ -55,13 +57,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
-
         <receiver android:name=".NotificationReceiver" />
-
     </application>
-
 
 </manifest>
