--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'io.github.dzmitry-lakisau:month-year-picker-dialog:1.0.0'
 
     //implementation "com.android.support:support-compat:28.0.0"
 
